--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,6 +11,8 @@ env:
   release_name: ${{ github.ref_name }}
 jobs:
   build:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     container:
       image: archlinux:latest
@@ -24,5 +26,5 @@ jobs:
       - name: Build image
         run: mkarchiso -v iso/
       - name: Upload iso to the release
-        run: python tools/upload_asset.py
+        run: gh release create -R ${{ github.repository }} v1.0.0 ./out/*.iso
 
