--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,5 +31,5 @@ jobs:
           cd ./out
           mkdir iso_parts
           split -d -b 1000M "$(ls *.iso)" iso_parts/"$(ls *.iso)"_part
-          gh release upload ${{ github.event.release.tag_name }} ./iso_parts/* —clobber -R ${{ github.repository }}
+          gh release upload ${{ github.event.release.tag_name }} ./iso_parts/* -R ${{ github.repository }}
 
