--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,6 +30,7 @@ jobs:
         run: |
           cd ./out
           mkdir iso_parts
-          split -d -b 1000M "$(ls *.iso)" iso_parts/"$(ls *.iso)"_part
+          # split -d -b 1000M "$(ls *.iso)" iso_parts/"$(ls *.iso)"_part
+          zip -r -s 1000m "$(ls *.iso)" iso_parts/
           gh release upload ${{ github.event.release.tag_name }} ./iso_parts/* -R ${{ github.repository }}
 
