--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Install Packages via Pacman
-        run: pacman -Sy; pacman --noconfirm -S git archiso python python-pygithub github-cli reflector zip p7zip  
+        run: pacman -Sy; pacman --noconfirm -S git archiso python python-pygithub github-cli reflector p7zip  
       - name: Change Arch docker mirror
         run: reflector -c "US" -f 12 -l 10 -n 12 --save /etc/pacman.d/mirrorlist
       - name: Build image
@@ -32,6 +32,6 @@ jobs:
           mkdir iso_parts
           # split -d -b 2000M "$(ls *.iso)" iso_parts/"$(ls *.iso)"_part
           #zip -s 2000m iso_parts/"$(ls *.iso)".zip "$(ls *.iso)"
-          7z -v700m a iso_parts/"$(ls *.iso)".zip "$(ls *.iso)"
+          7z -v1000m a iso_parts/"$(ls *.iso)".zip "$(ls *.iso)"
           md5sum iso_parts/* > iso_parts/md5sums.txt
           gh release upload ${{ github.event.release.tag_name }} ./iso_parts/* -R ${{ github.repository }}
