--- a/iso/airootfs/etc/mkinitcpio.conf
+++ b/iso/airootfs/etc/mkinitcpio.conf
@@ -56,8 +56,8 @@ HOOKS=(base udev modconf memdisk archiso archiso_loop_mnt archiso_pxe_common arc
 # is used. Use 'cat' to create an uncompressed image.
 #COMPRESSION="gzip"
 #COMPRESSION="bzip2"
-#COMPRESSION="lzma"
-COMPRESSION="xz"
+COMPRESSION="lzma"
+#COMPRESSION="xz"
 #COMPRESSION="lzop"
 #COMPRESSION="lz4"
 #COMPRESSION="zstd"
