--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,7 +14,7 @@ jobs:
   build:
     permissions:
       contents: write
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     container:
       image: archlinux:latest
       options: --privileged
